--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-psycopg[binary]>=3.2.0
-pgvector
-sentence-transformers
-numpy
+fastapi>=0.114
+uvicorn[standard]>=0.30
+psycopg[binary,pool]>=3.2
+pgvector>=0.2
+sentence-transformers>=3.0
+numpy>=1.26
+pydantic>=2.7
+pytest>=8.3
+httpx>=0.27
